2007-06-10 Mateusz Loskot <mateusz@loskot.net>

	* tests/unit/utility.h: Added custom operators for static and
	  dynamic casts of pointers wrapped with std::auto_ptr<T> type.
	* tests/unit/algorithm/ConvexHullTest.cpp: Added unit test for
	  geos::algorithm::ConvexHull.
	* tests/unit/algorithm/CGAlgorithms/isCCWTest.cpp: Added unit test for
	  geos::algorithm::CGAlgorithms::isCCW() function.
	* tests/unit/algorithm/CGAlgorithms/computeOrientationTest.cpp: Added unit
	  test for geos::algorithm::CGAlgorithms::computeOrientation() function.
	* tests/unit/Makefile.am: Added files with new tests.

2007-06-08 Mateusz Loskot <mateusz@loskot.net>

	* capi/geos_c.h.in: Applied Konstantin Baumann's suggestion
	  about including version.h in C API header for Visual C++.
	* build/msvc80/geos_lib/geos_lib.vcproj: Updated project file.
	* source/algorithm/InteriorPointArea.cpp,
	  source/algorithm/SIRtreePointInRing.cpp,
	  source/algorithm/HCoordinate.cpp,
	  source/algorithm/CentroidArea.cpp,
	  source/algorithm/PointLocator.cpp,
	  source/algorithm/InteriorPointLine.cpp,
	  source/algorithm/CentroidLine.cpp,
	  source/algorithm/InteriorPointPoint.cpp,
	  source/algorithm/CentroidPoint.cpp,
	  source/algorithm/CGAlgorithms.cpp,
	  source/algorithm/MinimumDiameter.cpp,
	  source/geom/CoordinateSequence.cpp,
	  source/operation/buffer/BufferSubgraph.cpp,
	  source/index/chain/MonotoneChainBuilder.cpp,
	  source/index/strtree/STRtree.cpp,
	  source/index/strtree/SIRtree.cpp,
	  source/index/quadtree/DoubleBits.cpp,
	  source/index/sweepline/SweepLineIndex.cpp,
	  source/geomgraph/EdgeList.cpp,
	  source/geomgraph/Edge.cpp,
	  source/headers/geos/geom/CoordinateFilter.h,
	  source/headers/geos/index/chain/MonotoneChainOverlapAction.h,
	  source/headers/geos/index/bintree/Root.h,
	  source/headers/geos/geomgraph/Edge.h,
	  source/headers/geos/geomgraph/Node.h: cleaned signed/unsigned types
	  mixtures, got rid from annoying compiler warnings.